add github discussion link

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,6 +2,7 @@
 <p>專題題目: </p>
 <p>強化學習在機電系統設計與控制中之應用 </p>
 <p>Application of reinforcement learning in design and control of mechatronic systems</p>
+<p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
@@ -16,8 +17,7 @@
 <p>以下測試能否正常從 downloads 目錄直接擷取 pdf 檔案:</p>
 <p style="padding-left: 30px;"><a href="/downloads/Deep Learning with Python.pdf">deep learning with python.pdf</a></p>
 <p>以下則是將 root 只到 /home/yen/cad1_site 目錄的設定:</p>
-<p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p>
-<h2>專題定位</h2>
+<p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p><h2>專題定位</h2>
 <p>2021/01/08</p>
 <p style="padding-left: 30px;">Adagrad: <a href="/downloads/2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf">2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf">2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf</a></p>
@@ -811,8 +811,7 @@ y = np.array(([1], [0], [0], [0], [0], [0], [0], [1]), dtype=float)</pre>
 <p>Epochs(疊代次數，feedForward+backprogation運算完算一次疊代)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"># 訓練疊代次數
 trainingEpochs = 1000</pre>
-<p></p><h1>Reference</h1>
-<h2>Flutter</h2>
+<p></p><h1>Ref</h1><h2>Flutter</h2>
 <p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
 <p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
 <p><a href="https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b">https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b</a></p>
