--- a/content/index.html
+++ b/content/index.html
@@ -137,22 +137,13 @@ img.add_border {
 <p>專題題目: </p>
 <p>強化學習在機電系統設計與控制中之應用 </p>
 <p>Application of reinforcement learning in design and control of mechatronic systems</p>
+<p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<hr/>
-<p>靜態網站: <a href="http://cad1.kmol.info">http://cad1.kmol.info</a></p>
-<p>這是最原始的 nginx 設定:</p>
-<p style="padding-left: 30px;"><a href="/nginx.conf.html">nginx.config.html</a></p>
-<p style="padding-left: 30px;"><a href="/default.html">default.html</a></p>
-<p>以下測試能否正常從 downloads 目錄直接擷取 pdf 檔案:</p>
-<p style="padding-left: 30px;"><a href="./../downloads/Deep Learning with Python.pdf">deep learning with python.pdf</a></p>
-<p>以下則是將 root 只到 /home/yen/cad1_site 目錄的設定:</p>
-<p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p>
-<br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
+<p style="padding-left: 30px;">40723150</p><br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
         
     <!-- footer -->
       <div class="container">
