--- a/content/Gradient Descent Optimizer.html
+++ b/content/Gradient Descent Optimizer.html
@@ -133,21 +133,29 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試<br /><h1>參考資料</h1>
-<ol>
-<li><a href="https://easyai.tech/en/blog/reinforcement-learning-with-python/">https://easyai.tech/en/blog/reinforcement-learning-with-python/</a></li>
-<li><a href="https://github.com/openai/gym">https://github.com/openai/gym</a></li>
-<li><a href="https://github.com/bhyang/gym-vrep">https://github.com/bhyang/gym-vrep</a></li>
-<li><a href="https://arxiv.org/pdf/1608.05742.pdf">https://arxiv.org/pdf/1608.05742.pdf</a></li>
-<li><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a></li>
-<li><a href="https://arxiv.org/abs/1906.11176">https://arxiv.org/abs/1906.11176</a></li>
-<li><a href="https://github.com/ycps/vrep-env">https://github.com/ycps/vrep-env</a></li>
-<li><a href="https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4">https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4</a></li>
-<li><a href="https://github.com/araffin/learning-to-drive-in-5-minutes">https://github.com/araffin/learning-to-drive-in-5-minutes</a></li>
-<li><a href="https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/">https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/</a></li>
-<li><a href="https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf">https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf</a></li>
-</ol>
-<br />LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試</div>
+    <div id="tipue_search_content">優化器 << <a href='優化器.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref<br /><h1>Gradient Descent Optimizer</h1>
+<p>(<a href="https://hackernoon.com/the-reason-behind-moving-in-the-direction-opposite-to-the-gradient-f9566b95370b">資料來源</a>)</p>
+<p style="text-align: center;"><strong><img alt="Error_surface" caption="false" height="200" src="./../images/Error_surface.png" width="231"/></strong></p>
+<p style="text-align: center;"><strong>圖1. Error_surface<sub>(<a href="https://hackernoon.com/the-reason-behind-moving-in-the-direction-opposite-to-the-gradient-f9566b95370b">圖片來源</a>)</sub></strong></p>
+<p>藉由梯度下降將目標函數值最小化，目標函數以loss function L(θ)為例，θ為weight(w) 和 bias(b) 的向量函數，為了找到error surface(圖1)上的最小值，因此加上∆θ 將θ的方向修正並引導到正確方向，避免每次修正的過多導致錯過最小值，利用係數η(學習率)縮放<span>∆θ的修正量(圖2)，修正後方程式為：</span></p>
+<p style="text-align: center;"><span>θ = θ + η·∆θ</span></p>
+<p style="text-align: center;"><span><img alt="theta_vector" caption="false" height="193" src="./../images/theta_vector.png" width="297"/></span></p>
+<p style="text-align: center;"><span><strong>圖2. Theta_vector<sub>(<a href="https://hackernoon.com/the-reason-behind-moving-in-the-direction-opposite-to-the-gradient-f9566b95370b">圖片來源</a>)</sub></strong></span></p>
+<p><span></span>將<span>θ以<a href="https://youtu.be/3d6DsjIBzJ4">泰勒展開式</a>表示，假設並∆θ為u:</span></p>
+<p style="text-align: center;"><span>▽L(θ) = [∂L(θ)/∂w , ∂L(θ)/∂b]</span></p>
+<p style="text-align: center;"><span>L(θ+ηu) = L(θ) + ηu<sup>T</sup>·▽θL(θ) + (η<sup>2</sup>/2!)u<sup>T</sup>·▽2L(θ)u + (η<sup>3</sup>/3!) ... + (η<sup>4</sup>/4!) ... + (η<sup>n</sup>/n!)...</span></p>
+<p style="text-align: left;"><span>以泰勒展開式的型式表示的好處是： θ 些微的更動產生新值。η 值通常小於一，當 η<sup>2</sup> &lt;&lt; 1，因此可以忽略高階項 </span></p>
+<p style="text-align: center;"><span>L(θ+ηu) = L(θ) + ηu<sup>T</sup> · ▽θL(θ) [η is typically small, so η<sup>2</sup> , η<sup>3</sup> , · · · → 0]</span></p>
+<p style="text-align: left;"><span>新的 L(θ + ηu) 輸出的值會小於 L(θ) L(θ+ηu) − L(θ) &lt; 0，同理可證 u<sup>T</sup>·▽θL(θ) &lt; 0，符合u這條件：當新的值小於舊的值，u就是一個好的值。假設u和▽θL(θ) 的夾角為<a href="https://www.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/vector-dot-product-and-vector-length">β</a></span></p>
+<p style="text-align: center;"><span>cos(β) = u<sup>T</sup>·▽θL(θ)|u<sup>T</sup>||▽θL(θ)| </span></p>
+<p style="text-align: left;"><span>因為 cos(θ) 的值介於 1 和-1 之間</span></p>
+<p style="text-align: center;"><span> −1 &lt; cos(β) = u<sup>T</sup>·▽θL(θ) |u<sup>T</sup>||▽θ L(θ)| ≤ 1 </span></p>
+<p style="text-align: center;"><span>k = |u<sup>T</sup>||▽θ L(θ)| </span><span>−k ≤ k cos(β) = <span>u</span><sup>T</sup>·▽θL(θ) ≤ k</span><span> </span></p>
+<p style="text-align: left;"><span>所以盡可能的讓新值小於舊值 (L(θ+ηu) − L(θ) &lt; 0)，loss 值就會減少得越多。因此 u T · ▽θL(θ) 應該為負，在 這情況下 cos(β) 等於 −1，β 的角度為 180<sup>◦</sup>，這就是θ移動的方向與梯度方向相反的原因。 梯度下降法告訴我們：當 θ 在特定值，並想減少新的 θ 值，使 loss 值逐漸減少就應該與梯度相反的方向找 (若梯度為正值，找最小值就需往負的方向找) </span></p>
+<p style="text-align: center;"><span>w<sub>t=1</sub> = <span>w</span><sub>t</sub> − η▽w<sub>t</sub></span></p>
+<p style="text-align: center;"><span>b<sub>t=1</sub> = <span>b</span><sub>t</sub> − η▽b<sub>t</sub></span></p>
+<p style="text-align: center;"><span>where at w = w<sub>t</sub>, b = <span>b</span><sub>t</sub> </span></p>
+<p style="text-align: center;"><span>w<sub>t</sub> = ∂L(θ)/∂w；▽b<sub>t</sub> = ∂L(θ)/∂b </span></p><br />優化器 << <a href='優化器.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
         
     <!-- footer -->
       <div class="container">
