--- a/content/優化器.html
+++ b/content/優化器.html
@@ -133,21 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試<br /><h1>參考資料</h1>
-<ol>
-<li><a href="https://easyai.tech/en/blog/reinforcement-learning-with-python/">https://easyai.tech/en/blog/reinforcement-learning-with-python/</a></li>
-<li><a href="https://github.com/openai/gym">https://github.com/openai/gym</a></li>
-<li><a href="https://github.com/bhyang/gym-vrep">https://github.com/bhyang/gym-vrep</a></li>
-<li><a href="https://arxiv.org/pdf/1608.05742.pdf">https://arxiv.org/pdf/1608.05742.pdf</a></li>
-<li><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a></li>
-<li><a href="https://arxiv.org/abs/1906.11176">https://arxiv.org/abs/1906.11176</a></li>
-<li><a href="https://github.com/ycps/vrep-env">https://github.com/ycps/vrep-env</a></li>
-<li><a href="https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4">https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4</a></li>
-<li><a href="https://github.com/araffin/learning-to-drive-in-5-minutes">https://github.com/araffin/learning-to-drive-in-5-minutes</a></li>
-<li><a href="https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/">https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/</a></li>
-<li><a href="https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf">https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf</a></li>
-</ol>
-<br />LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試</div>
+    <div id="tipue_search_content">neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Gradient Descent Optimizer.html'>Next</a> >> Gradient Descent Optimizer<br /><h1>優化器</h1>
+<p><strong>為了讓AI學習的錯誤率降低，因此利用優化器來降低loss function的值，在error surface上找到最小值，即是找到錯誤率最低的地方。以下將介紹幾種優化的方法：</strong></p>
+<h4><strong>Gradient Descent</strong></h4>
+<p><strong>利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。</strong></p>
+<p><strong></strong></p>
+<p><strong><a href="./../downloads/整理資料神經網路梯度下降優化法.pdf">神經網路優化器算法整理</a></strong></p><br />neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Gradient Descent Optimizer.html'>Next</a> >> Gradient Descent Optimizer</div>
         
     <!-- footer -->
       <div class="container">
