--- a/content/Stochastic gradient descent.html
+++ b/content/Stochastic gradient descent.html
@@ -133,21 +133,51 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試<br /><h1>參考資料</h1>
+    <div id="tipue_search_content">Gradient Descent Optimizer << <a href='Gradient Descent Optimizer.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref<br /><h1>Stochastic gradient descent</h1>
+<p>(<a href="https://ruder.io/optimizing-gradient-descent/">資料來源</a>)</p>
+<h4><span>Batch gradient descrnt</span></h4>
+<p><span>Vanilla gradient descent 又稱 Batch gradient descent(批次梯度下降法)，計算目標函數的梯度，參數 θ 對於整個 訓練資料：</span></p>
+<p style="text-align: center;"><span> θ = θ − η · ▽θL(θ)</span></p>
+<p>目標函數以為例 loss function L(θ)，參數 θ 為 weight (w) 和 bias (b) 的函數，η 為學習率。由於計算整個資料集計算梯度只更新一次，Bath gradient descent 可能非常慢並且對於資料集無法符合及記憶體來說棘手 (一次需要儲存整個資料集的資料，當更新和計算時會占用大量記憶體)。<span></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(nb_epochs) :
+params_grad = evaluate_gradient (loss_function, data, params)
+params = params − learning_rate ∗ params_grad
+</pre>
+<p style="text-align: center;">程式1. Batch gradient descrnt <sub><span>(</span><a href="https://ruder.io/optimizing-gradient-descent/">程式來源</a><span>)</span></sub></p>
+<p>預定義每次 epoch，先計算 loss function 梯度向量對於整個資料集參數向量。如果梯度值來自於先前計算出的梯度值，就會檢查梯度，並以梯度相反的方向更新參數 <span>θ</span>，學習率 <span>η </span>決定多大的更新量。Batch gradient descent 對於凸面誤差可以保證收斂到廣域最小值，對於非面凸誤差可以收斂到局部最小值。</p>
+<h4>Stochastic gradient descent</h4>
+<p>Stochastic gradient descent(SGD) 隨機梯度下降法，這裡的目標函數為 J<span>(θ, x</span><sup><span>i</span></sup><span>, y</span><sup><span>i</span></sup><span>)</span>(變數 θ 為 w(weight) 和 b(bias) 的函數，也可以寫成 J<span>(w, b, x</span><sup><span>i</span></sup><span>, y</span><sup><span>i</span></sup><span>)</span>)。</p>
+<p style="text-align: center;">θ = θ − η · ▽θJ(θ, x<sup><span>i</span></sup>, y<sup><span>i</span></sup>)</p>
+<p>批量梯度下降他會在每個參數更新前重新計算相似梯度。SGD 每次次執行會更新來消除多餘 (誤差)，因此通常速度 很快。SGD 頻繁更新並變化很大，因為目標方程式波動很大 [圖1]。</p>
+<p style="text-align: center;"><img alt="" height="300" src="./../images/sgd_fluctuation.png" width="382"/></p>
+<p style="text-align: center;">圖1.SGD fluctuation <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">圖片來源</a>)</sub></p>
+<p>SGD 的方程式一方面會跳到新的值和潛在局部最小值，另一方面 SGD 會持續超調 (誤差超過預期) 最後收斂到廣域最小值。無論如何他被顯示當學習率下降緩慢，SGD 顯示與 Batch gradient descent 同樣收斂行為，幾乎可以肯定地，對於凸面或非凸面優化，會收斂到絕對或是局部最小值。這程式碼片段 [程式.2] 在訓練樣本上加入一個迴圈來對每個樣本評估梯度。每個 epoch(訓練循環) 會打亂訓練數據。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(nb_epochs) :
+np.random.shuffle(data)
+for example in data :
+params_grad = evaluate_gradient (loss_function, example, params)
+params = params − learning_rate ∗ params_grad</pre>
+<p style="text-align: center;"><span>程式2. Stochastic gradient descrnt <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">程式來源</a><span>)</span></sub></span></p>
+<h4>Mini-batch gradient descent</h4>
+<p>Mini-batch gradient descent(小批量梯度下降) 各取前兩者的優點，將資料集分割成小區塊，每個小區塊大小稱作 batch size，每次跑完 batch size 算迭代 (iteration)一次，算完一次資料集即完成一次 epoch。舉例: 資料集大小為 1000，若 batch size 為 50，iteration 為 datasets 的 batch_size = 1000÷50 = 20，當 iteration 跑完 20 次算完成一次 epoch。</p>
+<p>這方式可以減少參數更新的方差，並且可以穩定收斂；可利用深度學習庫所共有的高度優化的矩陣優化，從而由一個小批量計算出梯度非常有效。通常 batch sizes 的範圍介於 50 ~256，會因為應用而有所差異。訓練神經網絡時，通常選擇 Mini-batch gradient descent 算法，而當使用這算法時，通常也使用術語 SGD。</p>
+<p>θ = θ − η · ▽θJ(θ,x<sup><sub>(i:i+n)</sub></sup>,y<sup><sub>(i:i+n)</sub></sup>)</p>
+<p>下面程式碼 [程式.3] 為迭代範例，batch size 大小為 50：</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(nb_epochs ) :
+np.random.shuffle(data)
+for batch in get_batches (data, batch_size = 50):
+params_grad = evaluate_gradient (loss_function, batch, params)
+params = params − learning_rate ∗ params_grad
+</pre>
+<p style="text-align: center;"><span>程式3. <span>Mini-batch</span> gradient descrnt <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">程式來源</a><span>)</span></sub></span></p>
+<h4>Challenges</h4>
+<p>Mini-batch gradient descent 無論如何還是無法確保收斂的很好，存在一些需要解決的挑戰：</p>
 <ol>
-<li><a href="https://easyai.tech/en/blog/reinforcement-learning-with-python/">https://easyai.tech/en/blog/reinforcement-learning-with-python/</a></li>
-<li><a href="https://github.com/openai/gym">https://github.com/openai/gym</a></li>
-<li><a href="https://github.com/bhyang/gym-vrep">https://github.com/bhyang/gym-vrep</a></li>
-<li><a href="https://arxiv.org/pdf/1608.05742.pdf">https://arxiv.org/pdf/1608.05742.pdf</a></li>
-<li><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a></li>
-<li><a href="https://arxiv.org/abs/1906.11176">https://arxiv.org/abs/1906.11176</a></li>
-<li><a href="https://github.com/ycps/vrep-env">https://github.com/ycps/vrep-env</a></li>
-<li><a href="https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4">https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4</a></li>
-<li><a href="https://github.com/araffin/learning-to-drive-in-5-minutes">https://github.com/araffin/learning-to-drive-in-5-minutes</a></li>
-<li><a href="https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/">https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/</a></li>
-<li><a href="https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf">https://upcommons.upc.edu/bitstream/handle/2117/133279/tfm-alex-cabaneros.pdf</a></li>
-</ol>
-<br />LaTeX << <a href='LaTeX.html'>Previous</a> <a href='研究生考試.html'>Next</a> >> 研究生考試</div>
+<li>選擇適當的學習率是有難度的。如果學習率太小會導致收斂困難或緩慢，學習率太大則會阻礙收斂導致 loss function 來回波動或發生偏離。</li>
+<li> 學習率清單嘗試在訓練的時候調整學習率，即根據預定義清單或當目標下降於閾值 (threshold) 時降低學習率。 但清單和閾值須預先定義，因此無法適應數據集的特徵。</li>
+<li> 另外相同學習率適用全部參數更新。如果資料稀疏而且外型有很特別的頻率，我們可能不希望將所有特徵更新 到相同的程度，而是對很少發生的特徵執行較大的更新。</li>
+<li> 最小化神經網路常見的高度非凸面誤差方程式 (error function) 的另一關鍵挑戰則是要避免被困在大量次優的局 部最小值區域中。認為困難實際上不是由局部最小值引起的，而是由鞍點引起的，即一維向上傾斜而另一維向下 傾斜的點。這些鞍點通常被相同誤差的平穩段包圍，這使得 SGD 很難逃脫，因為在所有維度上梯度都接近於零。</li>
+</ol><br />Gradient Descent Optimizer << <a href='Gradient Descent Optimizer.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
         
     <!-- footer -->
       <div class="container">
